<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.dicoding.a31submission4.fragment.MovieFavoriteFragment"
        android:label="@string/tab_text_1"
        tools:layout="@layout/bot_movie" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dicoding.a31submission4.fragment.FavoriteTvShowFragment"
        android:label="@string/tab_text_2"
        tools:layout="@layout/bot_tv" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dicoding.a31submission4.fragment.FavoriteDataFragment"
        android:label="@string/tab_text_3"
        tools:layout="@layout/bot_fav" />
</navigation>