<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.MovieDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_image"
            app:layout_constraintTop_toTopOf="@+id/tv_image"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="471dp" />

        <ImageView
            android:id="@+id/tv_image"
            android:layout_width="390dp"
            android:layout_height="350dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nama_judul"
            android:layout_width="381dp"
            android:layout_height="28dp"
            android:layout_toEndOf="@id/tv_image"
            android:text="@string/movies_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_image" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="18dp"
            android:layout_height="17dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_rating"
            android:src="@drawable/ic_star_black_24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_judul"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="351dp"
            android:layout_height="20dp"
            android:layout_below="@id/tv_nama_judul"
            android:layout_toEndOf="@id/tv_image"
            android:text="@string/release"

            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView_date"
            android:layout_width="18dp"
            android:layout_height="17dp"
            android:contentDescription="@string/image_rating"
            android:src="@drawable/ic_date_range_black_24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="351dp"
            android:layout_height="17dp"
            android:layout_below="@id/tv_release"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/tv_image"
            android:text="@string/rating"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_judul"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="354dp"
            android:layout_height="285dp"
            android:layout_below="@id/tv_nama_judul"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints"
            tools:text="@string/description" />

        <Button
            android:id="@+id/btn_add_favorite"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:text="@string/add_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
