<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="139dp"
            android:layout_height="233dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/movies_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="18dp"
            android:layout_height="17dp"
            android:layout_below="@+id/tv_item_name"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-7dp"
            android:layout_toEndOf="@+id/img_item_photo"
            android:contentDescription="@string/image_rating"
            android:src="@drawable/ic_star_black_24dp" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_name"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="-8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="@string/rating" />

        <ImageView
            android:id="@+id/imageView_date"
            android:layout_width="18dp"
            android:layout_height="17dp"
            android:layout_below="@+id/tv_item_rating"
            android:layout_marginStart="6dp"
            android:layout_marginTop="-4dp"
            android:layout_toEndOf="@+id/img_item_photo"
            android:contentDescription="@string/image_rating"
            android:src="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/tv_item_release"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_rating"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/release" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="201dp"
            android:layout_height="156dp"
            android:layout_below="@id/tv_item_release"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/description" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>